--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ flutter:
    - assets/images/potatoes.jpg
    - assets/images/bendakaya.jpg
    - assets/images/vankaya.webp
+   - assets/images/promobanner.jpg
+   - assets/images/basicvegetablescategory.jpg
+   - assets/images/leafyvegetables.jpg
 
     
 
